<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_login_bg"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp" >

            <ImageView
                android:id="@+id/logoButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/logoButton"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" >

            <EditText
                android:id="@+id/account"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/login_exdit_selector"
                android:hint="@string/emailBox"
                android:inputType="textEmailAddress"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/account"
                android:layout_alignTop="@id/account"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/login_email"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" >

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/login_exdit_selector"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="90dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/password"
                android:layout_alignTop="@id/password"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/login_password"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/r3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/zhuohao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="桌号："
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/zhuohao"
                android:layout_toRightOf="@+id/zhuohao" >
            </android.support.v4.view.ViewPager>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/zhuohao"
                android:layout_marginTop="10dp"
                android:onClick="loginListener"
                android:text="@string/title_activity_login"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>